[package]
name = "eldritchv2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "stream"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
eldritch-macros = { path = "../eldritch-macros" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.10.0", features = ["mutex", "spin_mutex"] }
flate2 = { workspace = true, optional = true, features = ["rust_backend"] }
tar = { workspace = true, optional = true }
tera = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
regex = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
sysinfo = { workspace = true, optional = true }
listeners = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.27"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
httptest = "0.16"
# sha256 = { workspace = true }

[features]
default = ["stdlib"]
std = []
stdlib = ["std", "dep:futures", "dep:flate2", "dep:tar", "dep:tera", "dep:tempfile", "dep:glob", "dep:regex", "dep:anyhow", "dep:serde_json", "dep:reqwest", "dep:tokio", "dep:sysinfo", "dep:listeners"]
fake_bindings = []

[[bin]]
name = "eldritch"
path = "bin/repl.rs"
required-features = ["stdlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
