[package]
name = "guardrails"
version = "0.1.0"
edition = "2021"

[features]
print_debug = []

[dependencies]
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sysinfo = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { workspace = true }

[build-dependencies]
serde_json = { workspace = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"
tempfile = { workspace = true }
