[package]
name = "host_unique"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { workspace = true, features = ["v4", "v5", "fast-rng"] }
log = { workspace = true }
netstat = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = { workspace = true }

[dev-dependencies]
pretty_env_logger = "0.5.0"
tempfile = { workspace = true }
