[package]
name = "pb"
version = "0.0.5"
edition = "2021"

[features]
imix = []


[dependencies]
anyhow = { workspace = true }
host_unique = { workspace = true }
log = { workspace = true }
netdev = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rand_chacha = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls-roots"] }
const-decoder = { workspace = true }
chacha20poly1305 = { workspace = true }
bytes = { workspace = true }
rand = { workspace = true }
x25519-dalek = { workspace = true }
lru = { workspace = true }

uuid = { workspace = true, features = ["v4", "fast-rng"] }
whoami = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }
which = { workspace = true }
home = "=0.5.11"
reqwest = { workspace = true, features = ["blocking", "json", "rustls-tls"] }
serde_json = { workspace = true }
