[package]
name = "screenshot"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", optional = true }
tokio-stream.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
xcap = { workspace = true, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "5.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5"

[features]
default = ["stdlib"]
stdlib = ["dep:xcap", "dep:image"]
