[package]
name = "transport"
version = "0.0.5"
edition = "2021"

[features]
default = []
grpc = ["pb/grpc"]
http1 = ["pb/http1"]
dns = ["dep:base32", "dep:rand"]
mock = ["dep:mockall"]

[dependencies]
pb = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
trait-variant = { workspace = true }
hyper = { version = "0.14", features = [
    "client",
] } # Had to user an older version of hyper to support hyper-proxy
hyper-proxy = {version = "0.9.1", default-features = false, features = ["rustls"]}
# DoH support is now always available for GRPC (not feature-gated)
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "webpki-roots"] }
base32 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
url = { workspace = true }
serde_json = { workspace = true }

# [feature = mock]
mockall = { workspace = true, optional = true }
