[package]
name = "transport"
version = "0.0.5"
edition = "2021"

[features]
default = []
grpc = ["pb/grpc"]
doh = ["dep:hickory-resolver"]
http1 = ["pb/http1"]
dns = ["dep:base32", "dep:rand", "dep:hickory-resolver", "dep:url"]
mock = ["dep:mockall"]

[dependencies]
pb = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
trait-variant = { workspace = true }
http = "1.4"
tower = "0.5"
# Use hyper 1.x for grpc
hyper = { workspace = true, features = ["client"] }
# Use hyper 0.14 for http1 transport
hyper_legacy = { package = "hyper", version = "0.14", features = ["client", "http1", "http2", "stream"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
hyper-http-proxy = { version = "1.1.0", default-features = false, features = ["rustls-tls-native-roots"] }
hyper-proxy-legacy = { package = "hyper-proxy", version = "0.9.1", default-features = false, features = ["rustls"] }
hickory-resolver = { version = "0.24", features = ["dns-over-https-rustls", "webpki-roots"], optional = true }
base32 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# [feature = mock]
mockall = { workspace = true, optional = true }
