[package]
name = "tavern"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["http"]
http = ["dep:reqwest"]

[dependencies]
graphql_client = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.4" , optional = true, features = ["blocking", "stream", "json"] }
anyhow = "1.0.55"
async-trait = "0.1.68"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4.24", features = ["serde"] }

[dev-dependencies]
tokio-test = "*"
httptest = "0.15.4"