[package]
name = "eldritch-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
eldritch-core = { path = "../eldritch-core" }
tower-lsp = "0.20.0"
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "io-std", "fs"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
