[package]
name = "eldritch-repl"
version = "0.4.0"
edition = "2024"

[[bench]]
name = "repl_bench"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
print_debug = []

[dependencies]
eldritch-core = { workspace = true }
spin = { workspace = true, features = ["rwlock"] }
log = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
