[package]
name = "eldritch-wasm"
version = "0.3.2"
edition = "2024"

[features]
stdlib = ["eldritch/stdlib", "eldritch/std"]
fake_bindings = ["eldritch/fake_bindings"]

[[bin]]
name = "eldritch"
path = "bin/repl.rs"
required-features = ["stdlib"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = { workspace = true }
eldritch = { workspace = true, default-features = false, features = [
    "std",
    "stdlib",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
uuid = { workspace = true, features = ["js"] }
eldritch = { workspace = true, default-features = false, features = [
    "fake_bindings",
] }

[dependencies]
eldritch-core = { workspace = true }
eldritch-repl = { workspace = true, default-features = false }
spin = { workspace = true, features = ["rwlock"] }
log = "0.4"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.5"
