[package]
name = "eldritch-core"
version = "0.3.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
no_std = []
std = []

[dependencies]
spin = { workspace = true }
libm = "0.2.15"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "interpreter"
harness = false

[[bench]]
name = "builtins"
harness = false
