[package]
name = "eldritch-hostcontext"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
prost-derive = { version = "0.12" }

[build-dependencies]
prost-build = "0.12"

[features]
default = ["std"]
std = ["prost/std"]
